fix overflow issue

--- a/src/css/friendcontainer.css
+++ b/src/css/friendcontainer.css
@@ -1,5 +1,6 @@
 .friends-container{
     display: flex;
     flex-direction: column;
-    
+    height: 100%;
+    overflow: auto;
 }
